jeeej vidis kak znam

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <meta charset="utf-8">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <title></title>
   </head>
@@ -11,6 +13,18 @@
       <h1 class="Name">
         <span class="Name-part G">G</span><span class="Name-part USTAV">USTAV</span>
       </h1>
+    </div>
+    <div class="gallery_segment">
+      <div class="container galler_wrapper">
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+        <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
+      </div>
     </div>
   </body>
 </html>
