--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <span class="Name-part G">G</span><span class="Name-part USTAV">USTAV</span>
       </h1>
     </div>
-      <p>What are you interested in</p>
+      <p>See my work</p>
+    <div class="foto-wrapper">
+      <img class="foto" src="foto.jpg" alt="photography">
+      <img class="foto" src="video.jpg" alt="videography">
+      <img class="foto" src="web.jpg" alt="Product degins">
+    </div>
     <div class="gallery_segment">
       <div class="container galler_wrapper">
         <div class="gallery_segment_item" style="background-image: url('/assets/images/viljuške.png')"></div>
